Cron 1.1.8

	* Wrap cron executions with a try/catch to prevent Exceptions from bombing out the rest of the calls.
	* Correctly display cron execution times that are > 2 minutes.
	-- Charlie Powell <charlie@eval.bz>  Tue, 07 Oct 2014 16:03:59 -0400

Cron 1.1.7

	* [Bug] Fix on the admin pages of the Cron system, incorrect master template was being used.
	* [Feature] Added some documentation for the cron system.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:28:29 -0400

Cron 1.1.6

	* [Bug] Just removed a minor development flag from the widget.
	-- Charlie Powell <charlie@eval.bz>  Wed, 15 May 2013 10:34:08 -0400

Cron 1.1.5

	* Cleaned up the admin dashboard widget a little.
	-- Charlie Powell <charlie@eval.bz>  Mon, 29 Apr 2013 02:27:54 -0400

Cron 1.1.4

	* Reformatted cron reports to make them more verbose about the different actions called during each
	  cron.
	* Cleaned up the admin interface for viewing crons a bit.
	-- Charlie Powell <charlie@eval.bz>  Mon, 15 Apr 2013 15:19:59 -0400

Cron 1.1.3b1

	* Updated the default options for Cron to keep updated with recent changes in Core.
	-- Charlie Powell <charlie@eval.bz>  Wed, 27 Feb 2013 18:30:39 -0500

Cron 1.1.2

	* [Feature] Added an admin dashboard widget to display crons that have run.
	* New howto page for instructions on setting up the cron jobs.
	-- Charlie Powell <charlie@eval.bz>  Wed, 20 Feb 2013 16:52:35 -0500

Cron 1.1.1

	* Cleaned up the admin styles a little
	-- Charlie Powell <charlie@eval.bz>  Fri, 01 Feb 2013 20:14:59 -0500

Cron 1.1.0

	* [Feature] Added a controller and templates for viewing and searching for executed cron passes.
	* [Feature] Added memory usage to the cron system and reports.
	* Using the new CHANGELOG handler in the package :P
	-- Charlie Powell <charlie@eval.bz>  Thu, 24 Jan 2013 04:51:15 -0500

Cron 1.0.0

	* Initial version
	-- Charlie Powell <charlie@eval.bz>  Tue, 25 Sep 2012 22:58:09 +0000
