@@ -1,3 +1,8 @@
+Cron 1.1.8-1~bpo268
+
+	* Better descriptions in the component metafile.
+	-- Charlie Powell <support@corepl.us>  Mon, 27 Feb 2017 04:05:41 -0500
+
 Cron 1.1.8
 
 	* Wrap cron executions with a try/catch to prevent Exceptions from bombing out the rest of the calls.
